--- a/PDM/SendMessage/app/src/main/res/layout/activity_main.xml
+++ b/PDM/SendMessage/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,31 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:rotation="0"
+    android:rotationX="0"
+    android:rotationY="0"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_marginBottom="32dp"
+        android:fontFamily="sans-serif"
+        android:lineSpacingExtra="14sp"
+        android:rotation="0"
+        android:rotationX="0"
+        android:rotationY="0"
+        android:text="Oi, meu chapa..."
+        android:textAppearance="@android:style/TextAppearance.Holo.Widget.DropDownHint"
+        android:textColor="#239204"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        android:typeface="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.524" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
