Aula do dia 29/10/2024, PDM, Aplicativo Send Message

--- a/PDM/SendMessage/app/src/main/res/layout/activity_main.xml
+++ b/PDM/SendMessage/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,29 @@
     android:rotation="0"
     android:rotationX="0"
     android:rotationY="0"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity" >
 
-    <TextView
+    <EditText
+        android:id="@+id/editTextMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:fontFamily="sans-serif"
-        android:lineSpacingExtra="14sp"
-        android:rotation="0"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:text="Oi, meu chapa..."
-        android:textAppearance="@android:style/TextAppearance.Holo.Widget.DropDownHint"
-        android:textColor="#239204"
-        android:textSize="48sp"
-        android:textStyle="bold"
-        android:typeface="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/message_write_message"
+        android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.524" />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/buttonSend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="SendMessageOnClick"
+        android:text="@string/button_send"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextMessage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
