--- a/PDM/ProductRegister/app/src/main/res/layout/activity_second.xml
+++ b/PDM/ProductRegister/app/src/main/res/layout/activity_second.xml
@@ -8,57 +8,57 @@
     tools:context=".SecondActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewDescription"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSupplier"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewSupplier"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/textViewCathegory"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewCathegory"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/textViewPrice"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSupplier"
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewPrice"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/textViewIncomming"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCathegory"
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewIncomming"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/textViewDate"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPrice"
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewDate"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textViewIncomming"
         tools:layout_editor_absoluteX="16dp" />
 
     <TextView
@@ -74,7 +74,7 @@
         android:textColor="#1839F4"
         android:textSize="24sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
